Feat/add db and redis (#1)
* Add PostgreSQL and Redis

* Update feed order

* Corrige erro de item.categories e adiciona comentários no scripts.js

* Corrige contexto da aplicação para APScheduler

* Adiciona imagem genérica para feeds sem imagem, novos feeds e alteracao da tamanho da fonte dos filtros.

* Desativados feeds sem imagem

* Change card layouts, fix date & get only last 3 days posts

* Corrige uso do contexto de requisição na URL do feed pessoal

* Add 'no-image' and small changes

* Adiciona personalização de texto dos botões de filtro

* Configurações ajustadas para Kubernetes & Definir GENERIC_IMAGE_URL para feeds sem imagem

* Fix Docker Compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,38 @@
 version: '3.8'
 
 services:
-  rss-proxy-app:
+  web:
     build: .
+    container_name: rss-proxy-flask_web
     ports:
-      - "8080:8080"
+      - "5000:5000"
     environment:
-      - FLASK_ENV=development
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - CACHE_REDIS_DB=0
+      - DATABASE_URL=postgresql://user:password@db:5432/feeds_db
+      - BASE_URL=http://localhost:5000/
+    depends_on:
+      - db
+      - redis
+
+  db:
+    image: postgres:13
+    container_name: rss-proxy-flask_db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=feeds_db
+
+  redis:
+    image: redis:7.2.5
+    container_name: rss-proxy-flask_redis
+    command: redis-server --appendonly yes
+    volumes:
+      - redis_data:/data
+
+volumes:
+  postgres_data:
+  redis_data:
