--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: rss-proxy-flask_web
     ports:
       - "5000:5000"
+    volumes:
+      - ./static/uploads:/app/static/uploads
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -15,11 +17,11 @@ services:
     depends_on:
       - db
       - redis
-    volumes:
-      - ./static/uploads:/app/static/uploads  # Mapeia o diretório de uploads
 
   db:
     image: postgres:13
+    ports:
+      - "5432:5432"
     container_name: rss-proxy-flask_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -27,8 +29,6 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=feeds_db
-    ports:
-      - "5432:5432"
 
   redis:
     image: redis:7.2.5
