--- a/k8s/i3-news-web-deployment.yaml
+++ b/k8s/i3-news-web-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: gcr.io/min-b302a/i3-news-v2:latest
+        image: gcr.io/min-b302a/i3-news-v2:remove-any-sources-2
         ports:
         - containerPort: 5000
         env:
