--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,14 @@ services:
     depends_on:
       - db
       - redis
+    entrypoint: >
+      sh -c "
+      sleep 10 &&
+      flask db init &&
+      flask db migrate &&
+      flask db upgrade &&
+      flask run --host=0.0.0.0
+      "
 
   db:
     image: postgres:13
