--- a/k8s/i3-news-web-deployment.yaml
+++ b/k8s/i3-news-web-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: gcr.io/min-b302a/i3-news-v2:remove-any-sources-2
+        image: gcr.io/min-b302a/i3-news-v2:add-individual-card-page
         ports:
         - containerPort: 5000
         env:
@@ -32,6 +32,13 @@ spec:
           value: postgresql://user:password@i3-news-postgres:5432/feeds_db
         - name: BASE_URL
           value: https://news.infinitoaocubo.com.br/
+        volumeMounts:
+        - name: image-storage
+          mountPath: /app/static/uploads
+      volumes:
+      - name: image-storage
+        persistentVolumeClaim:
+          claimName: image-pvc          
 ---
 apiVersion: v1
 kind: Service
