--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,50 @@
 version: '3.8'
 
 services:
-  rss-proxy-app:
+  web:
     build: .
+    container_name: rss-proxy-flask_web
     ports:
-      - "8080:8080"
+      - "5000:5000"
+    volumes:
+      - ./static/uploads:/app/static/uploads
     environment:
-      - FLASK_ENV=development
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - CACHE_REDIS_DB=0
+      - DATABASE_URL=postgresql://user:password@db:5432/feeds_db
+      - BASE_URL=http://localhost:5000/
+    depends_on:
+      - db
+      - redis
+    entrypoint: >
+      sh -c "
+      sleep 10 &&
+      flask db init &&
+      flask db migrate &&
+      flask db upgrade &&
+      flask run --host=0.0.0.0
+      "
+
+  db:
+    image: postgres:13
+    ports:
+      - "5432:5432"
+    container_name: rss-proxy-flask_db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=feeds_db
+
+  redis:
+    image: redis:7.2.5
+    container_name: rss-proxy-flask_redis
+    command: redis-server --appendonly yes
+    volumes:
+      - redis_data:/data
+
+volumes:
+  postgres_data:
+  redis_data:
